--- a/this.html
+++ b/this.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,36 +12,62 @@
 <script>
 var n = 1;
 var h = 1;
-setInterval(position, 1000);
 
-function position() {
-  document.getElementById("t2").style.top = Math.random * screen.height + 'px';
+function change() {
+var i = Math.floor(Math.random()*window.innerWidth);
+var j = Math.floor(Math.random()*window.innerHeight);
+document.getElementById("t2").style.left = i+"px";
+document.getElementById("t2").style.top = j+"px";
+}
+setInterval(change, 6000)
+
+function add() {
+document.getElementById("hb1").innerText += "—";
+if(document.getElementById('hb1').textContent == '—————————') {
+document.getElementById('hb1').style.color = 'lightgreen';
+}
+if(document.getElementById('hb1').textContent == '—————') {
+document.getElementById('hb1').style.color = 'yellow';
+}
 }
 </script>
-<button onclick="this.style.display = 'none';
+<button style="user-select: none" onclick="this.style.display = 'none';
 document.getElementById('t1').style.display = 'inline'">Start (1/10)</button>
-<button id=t1 style="display:none" onclick="this.style.display = 'none';
+<button id=t1 style="display:none; user-select: none" onclick="this.style.display = 'none';
 document.getElementById('n1').style.display = 'inline'">Click</button>
-<button id=n1 style="display:none" onclick="this.style.display = 'none';
+<button id=n1 style="display:none; user-select: none" onclick="this.style.display = 'none';
 if (n == 1) {document.getElementById('t2').style.display = 'inline'}
 if (n == 2) {document.getElementById('u1').style.display = 'inline';
 document.getElementById('t3').style.display = 'block';
 document.getElementById('t3').style.top = window.innerHeight + 'px';
 document.body.style.height = window.innerHeight + 21 + 'px'}
 if (n == 3) {document.getElementById('t4').style.display = 'inline';
-document.getElementById('hb1').style.display = 'inline'}">Next (2/10)</button>
-<button id=t2 style="display:none" onclick="this.style.display = 'none';
+document.getElementById('hb1').style.display = 'inline';
+setInterval(add, 500);}">Next (2/10)</button>
+<button id=t2 style="display:none; user-select: none" onclick="this.style.display = 'none';
 document.getElementById('n1').style.display = 'inline';
 document.getElementById('n1').innerText = 'Next (3/10)';
 n = 2">Click</button>
-<button id=u1 style="display:none">Click</button>
-<button id=t3 style="display:none; position:absolute;" onclick="this.style.display = 'none';
+<button id=u1 style="display:none; user-select: none">Click</button>
+<button id=t3 style="display:none; position:absolute; user-select: none" onclick="this.style.display = 'none';
 document.getElementById('u1').style.display = 'none';
 document.getElementById('n1').style.display = 'inline';
 document.getElementById('n1').innerText = 'Next (4/10)';
 n = 3;
 document.body.style.height = window.innerHeight - 21 + 'px'">Click</button>
-<button id=t4 style="display:none" onclick="if(h == 1) {
+<button id=t4 style="display:none; user-select: none" onclick="
+if(document.getElementById('hb1').innerText == '–') {
+document.getElementById('hb1').style.display = 'none';
+document.getElementById('t4').style.display = 'none';
+n = 4;
+}
+if(document.getElementById('hb1').innerText == '————————') {
+document.getElementById('hb1').style.color = 'yellow';
+}
+if(document.getElementById('hb1').innerText == '————') {
+document.getElementById('hb1').style.color = 'red';
+}
+if(h == 1) {
 document.getElementById('hb1').innerText = document.getElementById('hb1').innerText.replace('—', '–');
 h = 2;
 } else {
@@ -50,18 +75,7 @@ document.getElementById('hb1').innerText = document.getElementById('hb1').innerT
 h = 1;
 }">Click<br>/ &nbsp; || &nbsp; \<br>||</button>
 <br>
-<p id=hb1 style="display:none; color:lightgreen;">——————————</p>
+<p id=hb1 style="display:none; color:lightgreen; user-select: none">————————————</p>
 
-<script>
-var b = document.getElementById("t2");
-function change()
-{
-    var i = Math.floor(Math.random()*window.innerWidth);
-    var j = Math.floor(Math.random()*window.innerHeight);
-    b.style.left = i+"px";
-    b.style.top = j+"px";
-}
-setInterval(change, 575);
-</script>
 </body>
 </html>
