--- a/tradeachair.html
+++ b/tradeachair.html
@@ -249,11 +249,11 @@ trade('sc', 'ac', 3);">Trade</button>
 trade('sc', 'brc', 4);">Trade</button>
 <p>Brass Chair</p>
 
-<img src="https://st.hzcdn.com/fimgs/28e1ac030f625e4e_4080-w300-h300-b1-p0--.jpg" width="50" style="position:relative;left: 10px">
+<!--<img src="https://st.hzcdn.com/fimgs/28e1ac030f625e4e_4080-w300-h300-b1-p0--.jpg" width="50" style="position:relative;left: 10px">
 <span id=quc style="position:relative;left: 20px">0</span>
 <button style="position:relative;left: 20px" onclick="
 trade('spuc', 'quc', 3);">Trade</button>
-<p>Quite Uncomfortable Chair</p>
+<p>Quite Uncomfortable Chair</p>-->
 
 <img src="https://media.nisbets.com/asset/core/prodimage/large_new/gl329_5.jpg" width="70">
 <span id=stc>0</span>
