--- a/tradeachair.html
+++ b/tradeachair.html
@@ -311,6 +311,12 @@ trade('ptc', 'gc', 2);">Trade</button>
 trade('gc', 't', 5);">Trade</button>
 <p>Throne</p>
 
+<img src="https://greensofa24.github.io/tradeachair/thrench.png" width="70">
+<span id=tb>0</span>
+<button onclick="
+trade('t', 'tb', 5);">Trade</button>
+<p>Thrench</p>
+
 <img src="https://greensofa24.github.io/tradeachair/magicchair.png" width="70">
 <span id=mc>0</span>
 <p>Magic Chair</p>
