--- a/this.html
+++ b/this.html
@@ -110,7 +110,7 @@ document.getElementById('hb1').innerText = document.getElementById('hb1').innerT
 h = 1;
 }">Click<br>/ &nbsp; || &nbsp; \<br>||</button>
 <br>
-<p id=hb1 style="display:none; color:lightgreen; user-select: none">—</p>
+<p id=hb1 style="display:none; color:lightgreen; user-select: none">————————————————————————</p>
 <button class="u2">Don't</button>
 <button class="u2">Don't</button>
 <button class="u2">Don't</button>
