--- a/tradeachair.html
+++ b/tradeachair.html
@@ -73,7 +73,7 @@ localStorage.setItem('aeuc', document.getElementById('aeuc').innerText);
 localStorage.setItem('progress', progress);
 localStorage.setItem('prestige', prestige);
 localStorage.setItem('d', d);">Save</button>
-<button onclick="document.body.innerHTML = localStorage.getItem('body');
+<button onclick="document.body.innerHTML = localStorage.getItem('body'); localStorage.getItem('body');
 localStorage.setItem('a', localStorage.getItem('c'));
 localStorage.setItem('b', localStorage.getItem('d'));
 progress = localStorage.getItem('progress');
@@ -446,6 +446,10 @@ document.getElementById('n').style.display = 'inline';
 ">Start Trials</button>
 
 <button onclick="cheat()">Cheat Code</button>
+<button onclick="document.getElementById('p').style.display = 'block';
+document.getElementById('code').style.display = 'inline'">Need Update Without Progress Reset?</button>
+<p id=p style="display:none;">Follow instructions carefully and read all before starting: reload then type j and paste this into the search bar and press enter</p>
+<code id=code style="display:none;">avascript:localStorage.setItem('euc', document.getElementById('euc').innerText); localStorage.setItem('vuc', document.getElementById('vuc').innerText); localStorage.setItem('uc', document.getElementById('uc').innerText); localStorage.setItem('sc', document.getElementById('sc').innerText); localStorage.setItem('spuc', document.getElementById('spuc').innerText); localStorage.setItem('alc', document.getElementById('alc').innerText); localStorage.setItem('brc', document.getElementById('brc').innerText); localStorage.setItem('quc', document.getElementById('quc').innerText); localStorage.setItem('stc', document.getElementById('stc').innerText); localStorage.setItem('c', document.getElementById('c').innerText); localStorage.setItem('brzc', document.getElementById('brzc').innerText); localStorage.setItem('b', document.getElementById('b').innerText); localStorage.setItem('cpc', document.getElementById('cpc').innerText); localStorage.setItem('slc', document.getElementById('slc').innerText); localStorage.setItem('ptc', document.getElementById('ptc').innerText); localStorage.setItem('gc', document.getElementById('gc').innerText); localStorage.setItem('t', document.getElementById('t').innerText); document.getElementById('euc').innerText = localStorage.getItem('euc'); document.getElementById('vuc').innerText = localStorage.getItem('vuc'); document.getElementById('uc').innerText = localStorage.getItem('uc'); document.getElementById('sc').innerText = localStorage.getItem('sc'); document.getElementById('spuc').innerText = localStorage.getItem('spuc'); document.getElementById('alc').innerText = localStorage.getItem('alc'); document.getElementById('brc').innerText = localStorage.getItem('brc'); document.getElementById('quc').innerText = localStorage.getItem('quc'); document.getElementById('stc').innerText = localStorage.getItem('stc'); document.getElementById('c').innerText = localStorage.getItem('c'); document.getElementById('brzc').innerText = localStorage.getItem('brzc'); document.getElementById('b').innerText = localStorage.getItem('b'); document.getElementById('cpc').innerText = localStorage.getItem('cpc'); document.getElementById('slc').innerText = localStorage.getItem('slc'); document.getElementById('ptc').innerText = localStorage.getItem('ptc'); document.getElementById('gc').innerText = localStorage.getItem('gc'); document.getElementById('t').innerText = localStorage.getItem('t');</code>
 
 <script>
 function cheat() {
