--- a/guide.html
+++ b/guide.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html>
-<p>
-Trade guide
-<br>
-<br>5 Euc –> 1 Vuc
-<br>5 Vuc –> 1 Uc
-<br>5 Uc –> 1 Sc
-<br>10 Uc –> 1 Quc
-<br>
-<br>Key
-<br>
-<br>P: Painful
-<br>E: Extremely
-<br>V: Very
-<br>U: Uncomfortable
-<br>S: Stone
-<br>Sm: Smooth
-<br>Q: Quite
-<br>Cr: Crushable
-<br>Cl: Coloured
-<br>O: Office
-<br>
-<br>C: Chair
-<br>B: Bench
-<br>St: Stool
-</p>
+<head>
+<style>
+body {
+font-family: 'Comic Sans MS', 'Comic Sans';
+font-size: 90%
+}
+button {
+font-family: inherit;
+font-size: 87.5%;
+}
+</style>
+</head>
+<h1>Trade guide</h1>
+
+<pre style="font-family: inherit">
+Key
+
+D: Defective
+E: Extremely
+V: Very
+U: Uncomfortable
+S: Stone
+Q: Quite
+
+C: Chair
+B: Bench
+
+3 Euc –> 1 Vuc
+500 Euc –> 1 Aeuc
+5 Vuc –> 1 Uc
+3 Uc –> 1 Sc
+5 Uc –> 1 Spuc
+3 Spuc –> 1 Quc
+
+May be added:
+P: Painful
+Sm: Smooth
+O: Office
+Cl: Coloured
+St: Stool
+</pre>
 </html>
